--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
   
 
   <div id="content">
-    <p>This is my first post! I have no idea what I&rsquo;m doing!</p>
+    <p>This is my first post! I have no idea what I&rsquo;m doing!!</p>
 
   </div>
 
